Fixed paragraph alignment to be standard throughout app

--- a/style.scss
+++ b/style.scss
@@ -261,7 +261,6 @@ h1 {
   font-family: $paragraph-font;
 
   .describe {
-    margin: 1rem;
     text-indent: 2rem;
 
     h1 {
@@ -275,7 +274,7 @@ h1 {
       padding: 1rem;
       border-radius: 1rem;
       box-shadow: 4px 4px 7px rgba(0, 0, 0, 0.3);
-      margin-top: 0;
+      margin: 1rem;
 
       a {
         display: inline-block;
